webkit add blur

--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ body::before{
     color: #fff;
     padding: 40px 0px 0 0px;
     position: relative;
+    -webkit-backdrop-filter: blur(20px);
 }
 .text-button{
     display: flex;
