--- a/style.css
+++ b/style.css
@@ -419,7 +419,7 @@ body::before{
     .card-img {
          padding-bottom: 20px;
          height: 100%;
-         max-height: 100dvh;
+         /* max-height: 100dvh; */
     }
     .center_box{
         padding: 0;
