--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ body::before{
 
 @media screen and (max-width: 760px) {
     .text-box {
-        left: 12%; 
+        left: 12%;
         max-width: 440px;
         bottom: 27%;
     }
@@ -316,9 +316,7 @@ body::before{
     }
     .card-img {
         grid-template-columns: repeat(2, 1fr);
-    }
-    .card-img img {
-        /* width: 250px; */
+        padding: 0 60px;
     }
 }
 
@@ -355,6 +353,9 @@ body::before{
     }
     .btn-three {
         gap: 18px;
+    }
+    .card-img {
+        padding: 0 30px;
     }
 }
 @media screen and (max-width: 580px){
@@ -399,6 +400,9 @@ body::before{
     }
     .card-name {
         font-size: 14px;
+    }
+    .card-img {
+        padding: 0 20px;
     }
 
 }
