--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ body::before{
 }
 .card-img img{
     height: 100%;
-    /* width: 100%; */
+    width: 100%;
     border-radius: 15px;
     object-fit: cover;
 }
