--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body::before{
 }
 
 .btn-three button {
-    padding: 16px 70px;
+    padding: 12px 70px;
     border-radius: 30px;
     background-color: #ffffff40;
     border: 1px solid rgb(255 255 255 / 50%);
@@ -254,6 +254,75 @@ body::before{
 /* .cardface_box{
     display: none;
 } */
+
+.setting{
+    cursor: pointer;
+}
+.setting_popup{
+    display: none;
+}
+
+.month_year_ehod{
+    padding: 0 40px 0 40px;
+    height: 520px;
+    overflow-y: scroll;
+}
+.year p{
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 12px;
+}
+.month_awards_box{
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-bottom: 40px;
+}
+.award_box {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 21px 0;
+}
+.awards_box{
+    width: 100%;
+    backdrop-filter: blur(20px);
+    border: 1px solid rgb(255 255 255 / 50%);
+    border-radius: 15px;
+    color: #fff;
+    -webkit-backdrop-filter: blur(20px);
+    display: flex;
+}
+.award_box img{
+    margin-bottom: 16px;
+}
+.award_box p {
+    text-align: center;
+    font-weight: 500;
+}
+.line{
+    border-radius: 15px;
+    margin: 16px 0;
+    background-color: rgba(255, 255, 255, 0.2);
+    height: 3px;
+}
+.line::after{
+    content: '';
+position: absolute;
+background-color: #009F26;
+height: 3px;
+width: 20px;
+
+}
+.award_box .day{
+    font-size: 14px;
+    color: hsla(0, 0%, 100%, 0.6);
+    letter-spacing: 1px;
+}
+
+.monthli_level{
+    opacity: 20%;
+}
 
 @media screen and (max-width: 1620px){
     .king_img-bot img {
