--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ body::before{
     gap: 24px;
     display: flex;
     justify-content: center;
-    margin: 40px 0;
+    margin: 40px 20px;
 }
 .btn-three button a{
     font-size: 16px;
@@ -189,6 +189,8 @@ body::before{
     background-color: #ffffff40;
     border: 1px solid rgb(255 255 255 / 50%);
     cursor: pointer;
+    max-width: 254px;
+    width: 100%;
 }
 .btn-three button:hover{
     background-color: #009F26;
@@ -261,7 +263,9 @@ body::before{
 .setting_popup{
     display: none;
 }
-
+::-webkit-scrollbar {
+  width: 1px;
+}
 .month_year_ehod{
     padding: 0 40px 0 40px;
     height: 520px;
@@ -282,7 +286,7 @@ body::before{
 .award_box {
     margin-left: auto;
     margin-right: auto;
-    padding: 21px 0;
+    padding: 15px 0;
 }
 .awards_box{
     width: 100%;
@@ -295,6 +299,7 @@ body::before{
 }
 .award_box img{
     margin-bottom: 16px;
+    height: auto;
 }
 .award_box p {
     text-align: center;
@@ -323,6 +328,33 @@ width: 20px;
 .monthli_level{
     opacity: 20%;
 }
+.event_box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 100px 0 0 0;
+}
+.event_box img{
+    margin: auto;
+}
+.event_box p{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+.text_1{
+    font-size: 20px;
+    font-weight: 500;
+    margin: 20px 0 0 0;
+    text-align: center;
+}
+.text_2{
+    color:  rgba(255, 255, 255, 0.6);
+    font-weight: 500;
+    margin: 12px 0 0 0;
+    text-align: center;
+}
+
 
 @media screen and (max-width: 1620px){
     .king_img-bot img {
@@ -377,6 +409,9 @@ width: 20px;
 .card-name {
     font-size: 18px;
     font-weight: 500;
+}
+.month_awards_box {
+    grid-template-columns: repeat(4, 1fr);
 }
 }
 
@@ -440,6 +475,16 @@ width: 20px;
         grid-template-columns: repeat(2, 1fr);
         padding: 0 60px;
     }
+    .month_awards_box {
+    grid-template-columns: repeat(3, 1fr);
+     margin-bottom: 25px;
+    }
+    .month_year_ehod {
+    padding: 0 25px 0 25px;
+    }
+    .btn-three {
+    margin: 30px 20px;
+    }
 }
 
 @media screen and (max-width: 667px){
@@ -488,11 +533,24 @@ width: 20px;
         row-gap: 12px; 
         column-gap: 12px;
     }
+    .month_year_ehod {
+    padding: 0 20px 0 20px;
+    }
+    .month_awards_box{
+        row-gap: 12px;
+       column-gap: 12px 
+    }
+    .btn-three button {
+    padding: 8px 15px;
+    }
 }
 
 @media screen and (max-width: 490px) {
 .text-box {
     max-width: 276px;
+}
+.btn-three {
+    gap: 10px;
 }
 }
 @media screen and (max-width: 470px){
@@ -503,12 +561,11 @@ width: 20px;
         right: 16px;
     }
     .btn-three {
-        margin: 20px 0px;
-
+        margin: 20px 10px;
         gap: 6px;
     }
     .btn-three button { 
-        padding: 8px 15px;
+        padding: 8px 12px;
     }
     .don-btn a {
         color: #009F26;
@@ -626,6 +683,15 @@ width: 20px;
         width: 100px;
         object-fit: contain;
     } */
+    .awards_box {
+    background-color: #ffffff40;
+    }
+    .month_year_ehod{
+        height: 100%;
+    }
+    .btn-three button a {
+    font-size: 14px;
+    }
 }
 @media screen and (max-width: 380px){
      .image_face_box img {
@@ -641,5 +707,8 @@ width: 20px;
     .card-img img {
         object-position: 80%;
     }
+    .month_awards_box {
+    grid-template-columns: repeat(2, 1fr);
+   }
 }
 
