--- a/style.css
+++ b/style.css
@@ -421,7 +421,7 @@ width: 20px;
     align-items: center;
     justify-content: center;
     display: grid;
-    padding-top: 40px;
+    /* padding-top: 40px; */
     color: #fff;
 }
 .new_score_box p{
@@ -459,8 +459,7 @@ width: 20px;
     border-radius: 20px;
     backdrop-filter: blur(80px);
     background-color: #ffffff40;
-    padding: 24px;
-    margin-top: 16px;
+    padding: 20px;
 }
 .best_score_box {
     margin-top: 50px;
@@ -468,17 +467,18 @@ width: 20px;
 .text_bs{
     font-size: 24px;
     font-weight: 700;
+    margin-bottom: 16px;
 }
 .box_t_w_m_at{
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 4px solid rgba(255, 255, 255, 0.2);
-    padding-bottom: 16px;
-    margin-bottom: 20px;
+    padding-bottom: 10px;
+    margin-bottom: 12px;
 }
 .score_box .text_t_w_m_at{
-    font-size: 20px;
+    font-size: 19px;
     font-weight: 600;
 }
 .score_nabar{
@@ -496,13 +496,33 @@ width: 20px;
     gap: 6px;
     font-weight: 500;
     color: rgba(255, 255, 255, 1);
+    font-size: 14px;
 }
 .score_nabar .nabar{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
 }
-
-
+.all_time_new_score .new_game {
+    color: #fff;
+    font-size: 20px;
+    background-color: #009F26;
+    border: 1px solid #009F26;
+    padding: 15px 125px;
+    border-radius: 50px;
+    font-family: "Montserrat";
+    text-align: center;
+    display: block;
+    margin: auto;
+    cursor: pointer;
+    margin-top: 50px;
+}
+.main {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+    margin-top: 30px;
+    margin-bottom: 55px;
+}
 
 
 
