--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ body::before {
     padding: 40px 0px 0 0px;
     position: relative;
     -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(80px);
 }
 .text-button{
     display: flex;
@@ -386,11 +387,12 @@ width: 20px;
     font-size: 20px;
     line-height: 30px;
 }
-.second_text samp{
+.second_text span{
     color: #009f26;
+    font-family: "Montserrat";
 }
 .box-welcome {
-    max-width: 775px;
+    max-width: 685px;
     width: 100%;
     backdrop-filter: blur(20px);
     background-color: #ffffff40;
@@ -402,6 +404,7 @@ width: 20px;
     padding: 40px 50px 0 50px;
     position: relative;
     -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(80px);
 }
 .tutorial_pop_up {
     width: 100%;
@@ -418,32 +421,42 @@ width: 20px;
 }
 
 .all_time_new_score{
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: #fff;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    display: grid;
-    /* padding-top: 40px; */
-    color: #fff;
+    display: flex;
+    text-align: center;
+    width: 100%;
+    height: 100%;
 }
 .new_score_box p{
-    font-size: 32px;
-    font-weight: 700;
+    font-size: 28px;
+    font-weight: 600;
     text-align: center;
 }
 .icons_score{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 28px 0 50px 0;
+    margin: 20px 0 35px 0;
     gap: 12px;
 }
 .icons_score p{
-    font-size: 40px;
-    font-weight: 700;
+    font-size: 30px;
+    font-weight: 600;
+}
+.icons_score img {
+    width: 36px;
 }
 .score_img_ss{
     border-radius: 20px;
-    max-width: 470px;
-    height: 250px;
+    max-width: 430px;
+    height: 240px;
     overflow: hidden;
     border: 9px solid #fff;
 }
@@ -462,23 +475,35 @@ width: 20px;
     padding: 20px;
 }
 .best_score_box {
-    margin-top: 50px;
+    margin-top: 35px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .text_bs{
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 16px;
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 15px;
+    text-align: left;
 }
 .box_t_w_m_at{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
     padding-bottom: 10px;
     margin-bottom: 12px;
 }
+.box_t_w_m_ati{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+    padding-bottom: 10px;
+}
 .score_box .text_t_w_m_at{
-    font-size: 19px;
+    font-size: 18px;
     font-weight: 600;
 }
 .score_nabar{
@@ -487,7 +512,7 @@ width: 20px;
     align-items: center;
 }
 .score_nabar .nabar_box{
-    padding: 6px 8px;
+    padding: 5px 7px;
     border: 1px solid rgb(255 255 255 / 50%);
     border-radius: 5px;
     backdrop-filter: blur(80px);
@@ -499,7 +524,7 @@ width: 20px;
     font-size: 14px;
 }
 .score_nabar .nabar{
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 600;
 }
 .all_time_new_score .new_game {
@@ -507,24 +532,45 @@ width: 20px;
     font-size: 20px;
     background-color: #009F26;
     border: 1px solid #009F26;
-    padding: 15px 125px;
+    padding: 12px 100px;
     border-radius: 50px;
     font-family: "Montserrat";
     text-align: center;
     display: block;
-    margin: auto;
     cursor: pointer;
-    margin-top: 50px;
+    margin: 35px auto 20px auto;
 }
 .main {
     text-align: center;
-    font-size: 24px;
-    font-weight: 700;
-    margin-top: 30px;
-    margin-bottom: 55px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
-
+.star_img_box {
+    border-radius: 50%;
+    max-width: 250px;
+    height: 250px;
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(-25deg, #F0B507, #FFDA17);
+}
+.smtb_box{
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+.smtb_box img{
+    width: 28px;
+}
+.manthli_score_text p{
+    max-width: 445px;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    margin: 18px 0 35px 0;
+}
 
 /* ======================================================== */
 
@@ -667,6 +713,41 @@ width: 20px;
     .second_text {
         font-size: 18px;
     }
+    .new_score_box p {
+        font-size: 24px;
+    }
+    .icons_score img {
+        width: 30px;
+    }
+    .icons_score {
+        margin: 15px 0 30px 0;
+    }
+    .best_score_box {
+        margin-top: 30px;
+    }
+    .score_box {
+        padding: 16px;
+    }
+    .score_box .text_t_w_m_at {
+        font-size: 16px;
+        font-weight: 500;
+    }
+    .score_nabar .nabar {
+        font-size: 16px;
+        font-weight: 500;
+    }
+    .all_time_new_score .new_game {
+        padding: 12px 60px;
+        margin: 30px auto 15px auto;
+        font-size: 18px;
+    }
+    .main {
+        font-size: 18px;
+        font-weight: 500;
+    }
+    .manthli_score_text p {
+        font-size: 20px;
+    }
 }
 
 @media screen and (max-width: 667px){
@@ -728,6 +809,11 @@ width: 20px;
     .btn-three button {
     padding: 8px 15px;
     }
+    .score_box {
+        margin-right: 20px;
+        margin-left: 20px;
+        width: -webkit-fill-available;
+    }
 }
 
 @media screen and (max-width: 490px) {
@@ -736,6 +822,11 @@ width: 20px;
 }
 .btn-three {
     gap: 10px;
+}
+.score_img_ss {
+    margin-right: 20px;
+    margin-left: 20px;
+    width: -webkit-fill-available;
 }
 }
 @media screen and (max-width: 470px){
@@ -898,6 +989,22 @@ width: 20px;
     .second_text {
         font-size: 16px;
         line-height: 27px;
+    }
+    .score_img_ss {
+        height: 220px;
+    }
+    .manthli_score_text p {
+        font-size: 16px;
+    }
+    .star_img_box {
+        max-width: 160px;
+        height: 160px;
+    }
+    .star_img_box img{
+        width: 84px;
+    }
+    .congratulations_box{
+        justify-content: space-around;
     }
 }
 @media screen and (max-width: 380px){
