--- a/style.css
+++ b/style.css
@@ -1400,8 +1400,8 @@ input:checked+.slider:before {
         background-color: black;
         padding: 20px 20px 0 20px;
         color: #fff;
-        position: unset;
-        transform: none;
+        /* position: unset; ` */
+        /* transform: none; */
         height: inherit;
     }
 
