--- a/style.css
+++ b/style.css
@@ -801,8 +801,23 @@ input:checked+.slider:before {
     cursor: pointer;
     width: auto;
 }
+.mainall{
+    display:flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
-
+.timer {
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 30px;
+    border: 1px solid #fff;
+    padding: 10px;
+    display: none;
+}
 
 
 /* ======================================================== */
