--- a/style.css
+++ b/style.css
@@ -816,7 +816,7 @@ input:checked+.slider:before {
     top: 30px;
     border: 1px solid #fff;
     padding: 10px;
-    display: none;
+    /* display: none; */
 }
 
 
